--- a/index.html
+++ b/index.html
@@ -391,12 +391,12 @@ Conectate a la mejor y más rápida fibra óptica del país.
                 <label for="plan">Elegí tu plan de Internet <span class="required">*</span></label>
                 <select name="plan" id="plan" class="form-control" required>
                   <option value="">Seleccionar...</option>
-                  <option value="Plan Básico">Fibra</option>
-                  <option value="Plan Avanzado">Flow</option>
-                  <option value="Plan Premium">Fibra + Flow</option>
-                  <option value="Plan Premium">Pospago</option>
-                  <option value="Plan Premium">Fibra + Pospago</option>
-                  <option value="Plan Premium">Fibra + Flow + Pospago</option>
+                  <option value="Plan Básico Fibra">Fibra</option>
+                  <option value="Plan Básico Flow">Flow</option>
+                  <option value="Plan Premium Fibra + Flow<">Fibra + Flow</option>
+                  <option value="Plan Básico Pospago<">Pospago</option>
+                  <option value="Plan Premium Fibra + Pospago">Fibra + Pospago</option>
+                  <option value="Plan Premium combo completo">Fibra + Flow + Pospago</option>
 
 
 
