--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ Conectate a la mejor y más rápida fibra óptica del país.
             <div class="chat-text"><span><strong>Gabriela E.:</strong><br>Hola 👋 Todo bien? Estas interesado/a en adquirir un plan!</span>
             </div>
         </div>
-        <a class="chat-button" href="https://api.whatsapp.com/send?phone=595974127262&text=Hola,%20vengo%20desde%20la%20p%C3%A1gina%20web,%20estoy%20interesado%20en%20adquirir%20un%20plan." target="_blank">
+        <a class="chat-button" href="https://api.whatsapp.com/send?phone=595972236094&text=Hola,%20vengo%20desde%20la%20p%C3%A1gina%20web,%20estoy%20interesado%20en%20adquirir%20un%20plan." target="_blank">
             <span>Escriba su mensaje</span>
             <svg viewBox="0 0 32 32">
             <path d="M19.47,31a2,2,0,0,1-1.8-1.09l-4-7.57a1,1,0,0,1,1.77-.93l4,7.57L29,3.06,3,12.49l9.8,5.26,8.32-8.32a1,1,0,0,1,1.42,1.42l-8.85,8.84a1,1,0,0,1-1.17.18L2.09,14.33a2,2,0,0,1,.25-3.72L28.25,1.13a2,2,0,0,1,2.62,2.62L21.39,29.66A2,2,0,0,1,19.61,31Z" />
@@ -524,7 +524,7 @@ Conectate a la mejor y más rápida fibra óptica del país.
                             </a>
                         </li>
                     </ul> -->
-                    <div class="footer-copyright">&copy; Ejecutivo de ventas</div>
+                    <div class="footer-copyright">&copy; Ejecutiva de ventas</div>
                 </div>
             </div>
         </footer>
